# tdl-token

./: Anchor.toml  CONTRIBUTING.md  DOCUMENTATION.md  README.md  SECURITY.md  addresses.json  check-exports.js  deploy.sh  metadata.json  package-lock.json  package.json  setup.sh  token-metadata.json  tsconfig.json
.github/workflows/: anchor.yml  ci.yml
app/: .env.example  index.html  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  config.ts  index.css  main.tsx
app/src/api/: client.ts  presale.ts  reports.ts
backend/: .env.example  package.json  tsconfig.json
backend/src/: app.ts  config.ts  index.ts
client/: access-control.ts  addresses.json  create-metadata-account.ts  create-metadata-metaplex.js  create-metadata.js  create-metadata.ts  distribution.ts  fix-metadata-proper.ts  fix-metadata.ts  force-metadata-update.ts  interact.ts  interact.ts.backup  simple-create-metadata.ts  test-all-features.ts  update-metadata-uri.js
configs/: devnet.json
data/: whitelist.csv
programs/dollar-token/: Cargo.toml
programs/dollar-token/src/: lib.rs
programs/tdl_presale/: Cargo.toml
programs/tdl_presale/src/: lib.rs
scripts/: buy.ts  claim.ts  deploy-devnet.ts  hardening.ts  import-whitelist.ts  init-presale.ts  manage-access.ts  monitor.ts  postmortem-report.ts  presale-cli.ts  presale-config.ts  refund.ts  utils.ts  whitelist-merkle.ts
sdk/: index.ts  presaleClient.ts
sdk/idl/: tdl_presale.json
sdk/types/: tdl_presale.ts
tests/: access-control.ts  dollar-token.ts
tests/presale/: presale.spec.ts
(+38 files in other folders)
