[package]
name = "dollar-token"
version = "0.1.0"
description = "Dollar Token (TDL) - A custom SPL token with admin functions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dollar_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
